--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -6,3 +6,10 @@ form{
     display: flex;
 }
 
+img {
+    max-height: 50px ;
+    border: 2px solid #fff;
+    display: inline;
+    margin-left: 5px;
+}
+
