--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -4,7 +4,11 @@
             <h3>No messages yet... say hi using the message box below </h3>
         </div>
 
-        <ul class= "chat" *ngIf= "(messageService.messageThread$ | async)?.length > 0">
+        <ul #scrollMe
+            style="overflow: scroll; height: 500px;"
+            [scrollTop] = "scrollMe.scrollHeight"
+            class= "chat" 
+            *ngIf= "(messageService.messageThread$ | async)?.length > 0">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
