--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,18 +1,25 @@
 <div class="row">
-    <div class="col-2" *ngFor="let photo of member.photos">
-        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
+    <div class="col-2 img-wrapper" *ngFor="let photo of member.photos">
+        <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1"
+            [class.not-approved]="!photo.isApproved"
+        >
+
+        <div class="text-center img-text" *ngIf="!photo.isApproved">
+            <span class="text-danger">Awaiting approval</span>
+        </div>
+
         <div class="text-center">
             <button 
-                [disabled] = "photo.isMain"
-                (click) = "setMainPhoto(photo)"
-                [ngClass] = 'photo.isMain ? "btn-success active" : "btn-outline-success"'
-                class="btn btn-sm">
-            Main</button>
+                [disabled]="photo.isMain || !photo.isApproved"
+                (click)="setMainPhoto(photo)"
+                [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
+                class="btn btn-sm"
+            >Main</button>
             <button 
-                [disabled] = "photo.isMain"
-                (click) = "deletePhoto(photo.id)"
-                class="btn btn-sm btn-danger">
-            <i class="fa fa-trash"></i></button>
+                [disabled]="photo.isMain"
+                (click)="deletePhoto(photo.id)"
+                class="btn btn-sm btn-danger"
+            ><i class="fa fa-trash"></i></button>
         </div>
     </div>
 </div>
@@ -39,7 +46,7 @@
         <input type="file" ng2FileSelect [uploader]="uploader" />
     </div>
 
-    <div class="col-md-9" style="margin-bottom: 40px" *ngIf = "uploader?.queue?.length">
+    <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
 
         <h3>Upload queue</h3>
         <p>Queue length: {{ uploader?.queue?.length }}</p>
